--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="section-about__subscription">
                     Hello everyone, I'm Danyil from Ukraine, I'm 15 years old, I'm learning Front-End development.
                     I've been studying for 2 months. I study 5-7 hours a day. I really like programming and always
-                    do it in my free time. My stack is ( HTML, CSS, not much JS)
+                    do it in my free time. My stack is ( HTML, CSS, JS)
                 </div>
                 <div class="social__items">
                     <div class="section-social__item">
